--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -33,7 +33,7 @@ header{
         }
 
         .horizontal{
-            display: contents;
+            display:block;
         }
          
     } 
@@ -49,7 +49,7 @@ header{
         
 
         .horizontal{ 
-            display: contents;
+            display: block;
         }
         
         .vertical{
