--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,5 @@
-@import "./components/header"
+@import "./components/header";
+@import "./components/sections";
+@import "./components/footer";
+@import "./base/extends";
+@import "./base/mixin";
