--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -2,7 +2,9 @@ header{
     
     background-color: rgb(168, 204, 195);
 
-    .alinear{display: none;}
+    .alinear{
+        display: none;}
+
 
     h1{
         color: rgb(100, 100, 100);
@@ -10,7 +12,7 @@ header{
         font-weight: 400;
         font-size: 2.1rem;
         padding-top: 0.5rem;
-        margin-bottom: 0;}
+        }
     
     nav{
 
